--- a/requirements.txt
+++ b/requirements.txt
@@ -18,8 +18,8 @@ kombu==5.4.2
 packaging==24.2
 pillow==11.0.0
 prompt_toolkit==3.0.48
-psycopg2==2.9.10
-psycopg2-binary==2.9.10
+#psycopg2==2.9.10
+#psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-decouple==3.8
